deploy/k8s/overlays/minikube/patch-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: marketplace
spec:
  replicas: 1
