deploy/k8s/overlays/minikube/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: marketplace
  namespace: marketplace
spec:
  ingressClassName: nginx
